Bug 502978 - Haruna isn't memorizing that it was closed while maximized
Summary: Haruna isn't memorizing that it was closed while maximized
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.4.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: george fb
URL:
Keywords: qt6, usability
Depends on:
Blocks:
 
Reported: 2025-04-18 19:16 UTC by Fernando M. Muniz
Modified: 2025-10-18 18:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.14
Sentry Crash Report:


Attachments
Cursor on the upper-right corner would be over the X button in 1.3.3 (16.50 KB, image/png)
2025-04-18 19:16 UTC, Fernando M. Muniz
Details
Issue on Haruna 1.4.0 (2.18 MB, video/x-matroska)
2025-08-18 16:50 UTC, Fernando M. Muniz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando M. Muniz 2025-04-18 19:16:19 UTC
Created attachment 180389 [details]
Cursor on the upper-right corner would be over the X button in 1.3.3

Now in 1.4.0 Haruna isn't opening maximized, even though I activated the setting to memorize it's size.

It's filling the whole screen while windowed, so I can't close the player by shoving the cursor on the upper-right corner and clicking.
Comment 1 Bug Janitor Service 2025-04-20 11:48:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfig/-/merge_requests/367
Comment 2 george fb 2025-04-30 14:22:42 UTC
Git commit 71c35ab2c0d0e2f6b7791617b618c7e65f6e07c6 by George Florea Bănuș.
Committed on 30/04/2025 at 14:22.
Pushed by georgefb into branch 'master'.

kwindowstatesaver: call saveSize when window state changes

For Qt 6.9, we need to bind to the window state changing too.
Related: bug 502329
FIXED-IN: 6.14

M  +1    -0    src/gui/kwindowstatesaver.cpp

https://invent.kde.org/frameworks/kconfig/-/commit/71c35ab2c0d0e2f6b7791617b618c7e65f6e07c6
Comment 3 Fernando M. Muniz 2025-07-02 23:55:41 UTC
I'm having this issue again, I updated the system and rebooted just now to make sure.



Operating System: Arch Linux 
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.4-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: NVIDIA GeForce GTX 1650
Graphics Processor 2: Intel® Iris® Xe Graphics
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6
Comment 4 Fernando M. Muniz 2025-07-30 22:37:06 UTC
And now it's working again.
Comment 5 Fernando M. Muniz 2025-08-16 06:54:59 UTC
I figured out the new issue.

If you have a maximized window, then unmaximize, then maximize again: New windows will be unmaximized.
If you have a unmaximized window, then maximize, then unmaximize again: New windows will be maximized.

TLDR: The issue happens when a un/maximization is made then undone.
Comment 6 Fernando M. Muniz 2025-08-18 16:50:03 UTC
Created attachment 184213 [details]
Issue on Haruna 1.4.0

Operating System: Arch Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: NVIDIA GeForce GTX 1650
Graphics Processor 2: Intel® Iris® Xe Graphics
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6
Comment 7 Fernando M. Muniz 2025-10-18 18:05:08 UTC
(In reply to Fernando M. Muniz from comment #5)
> If you have a maximized window, then unmaximize, then maximize again: New
> windows will be unmaximized.
> If you have a unmaximized window, then maximize, then unmaximize again: New
> windows will be maximized.

Not having this issue now.