kwindowstatesaver: call saveSize when window state changes

For Qt 6.9, we need to bind to the window state changing too.


BUG: 502978
BUG: 502329
FIXED-IN: 6.14